tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.stderr
error[E0271]: type mismatch resolving `<SQLiteValue<'_> as SQLParam>::DialectMarker == PostgresDialect`
  --> tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.rs:13:13
   |
13 |     let _ = cast::<_, _, drizzle::core::types::Int>(user.name, drizzle::sqlite::types::Integer);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PostgresDialect`, found `SQLiteDialect`

error[E0277]: the trait bound `drizzle::sqlite::types::Integer: CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not satisfied
  --> tests/ui/sqlite_strict_affinity/fail/strict_cast_affinity_mismatch.rs:13:64
   |
13 |     let _ = cast::<_, _, drizzle::core::types::Int>(user.name, drizzle::sqlite::types::Integer);
   |             ---------------------------------------            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Integer`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `CastTarget<'_, Int, drizzle_core::dialect::SQLiteDialect>` is not implemented for `drizzle::sqlite::types::Integer`
      but trait `CastTarget<'_, drizzle::core::types::BigInt, drizzle_core::dialect::SQLiteDialect>` is implemented for it
  --> core/src/expr/util.rs
   |
   | / impl<'a> CastTarget<'a, crate::types::BigInt, SQLiteDialect>
   | |     for drizzle_types::sqlite::types::Integer
   | |_____________________________________________^
   = help: for that trait implementation, expected `drizzle::core::types::BigInt`, found `Int`
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
